--- a/site/view/upazila-list/items sugg.html
+++ b/site/view/upazila-list/items sugg.html
@@ -35,11 +35,11 @@ text-align:center;
 <h3>Honours 2nd year Exam Rutine 2019
 </div>
 <div class="it2" >
-<img src="j.jpg"width="100%"height="100%">
+<img src="https://1.bp.blogspot.com/-Lkl740k3iZI/XaRLYXT1M-I/AAAAAAAADSY/b4ni3G0k_TcT_1ardyuHMbN7Ayt-_GZKgCLcBGAsYHQ/s1600/Honours-2nd-year-routine-2019-part1.png"width="100%"height="100%">
 
 </div>
 <div class="it2" >
-<img src="j.jpg"width="100%"height="100%">
+<img src="https://1.bp.blogspot.com/-MHf1bG7RzYM/XaRLYZ8uw5I/AAAAAAAADSU/BYKAijTMH5gY_xO2al8UA89iVCGaOqX_wCLcBGAsYHQ/s1600/Honours-2nd-year-routine-2019-part2.png"width="100%"height="100%">
 
 </div>
 </div>
